--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint-config-prettier": "^9.1.0",
     "next": "14.0.4",
-    "prettier": "^3.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8.55.0",
+    "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "typescript": "^5"
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.1.1"
   }
 }
